# scrapeme

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  LICENSE  Makefile  Makefile.k8s  README.md  __REVERT_PLACEHOLDER__  data.json  docker-compose.production.yaml  docker-entrypoint.sh  load_test_results.json  profile.stats  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements.txt  results.json  results.jsonl  runner.py
.github/workflows/: ci.yml  docker-build.yml  security-scan.yml  stale.yml
charts/: .keep
charts/observability/: Chart.yaml  values.yaml
charts/observability-enterprise/: Chart.yaml  values.yaml
charts/observability/templates/: alertmanager.yaml  grafana.yaml  prometheus.yaml
charts/scrapeme/: Chart.yaml  values.yaml
charts/scrapeme-app/: Chart.yaml  values.yaml
charts/scrapeme-app/templates/: _helpers.tpl  analysistemplate.yaml  configmap.yaml  deployment.yaml  externalsecret.yaml  hpa.yaml  limitrange.yaml  namespace-podsecurity.yaml  networkpolicy-baseline.yaml  networkpolicy.yaml  pdb.yaml  podsecuritypolicy.yaml  priorityclass.yaml  rbac.yaml  resourcequota.yaml  rollout.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  storageclass.yaml
charts/scrapeme/templates/: velero-backup.yaml
charts/selenium-grid/: Chart.yaml  values.yaml
charts/selenium-grid/templates/: chrome.yaml  hub.yaml
config/: example_test_sites.yaml  loader.py  models.py  pydantic_models.py  sites.yaml  validators.py
core/: auth.py  browser.py  capture.py  circuit_breaker.py  enhanced_scraper.py  enhanced_serialization.py  exceptions.py  frames.py  metrics.py  rate_limiter.py  retry.py  scraper.py  secrets.py  serialization.py  type_aliases.py  types.py  url.py  waits.py
deploy/argo/: .keep  application-dev.yaml  application-prod.yaml  application-staging.yaml  applicationset-multicluster.yaml
deploy/environments/: .keep  dev.yaml  prod.yaml  staging.yaml
docs/: README.md  architecture.md  building.md  configuration.md  deployment.md  development.md  docker.md  getting-started.md  index.md  load-testing.md  makefile.md  monitoring.md  observability.md  running.md  testing.md
docs/runbooks/: disaster-recovery.md  security-incident.md
infra/: health.py  logging_config.py  server.py  signals.py
k8s/: README.md  alertmanager.yaml  configmap.yaml  configmaps.yaml  cronjob.yaml  deployment.yaml  grafana.yaml  hpa.yaml  namespace.yaml  network-policies.yaml  prometheus.yaml  pvc.yaml  scrapeme-deployment.yaml  scrapeme-service.yaml  secrets.yaml  selenium-chrome.yaml  selenium-hub.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  storage.yaml
k8s/base/: configmaps.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  secrets.yaml  storage.yaml
k8s/base/monitoring/: alertmanager.yaml  grafana.yaml  kustomization.yaml  prometheus.yaml
k8s/base/scrapeme/: deployment.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  service.yaml
k8s/base/selenium/: chrome.yaml  hub.yaml  kustomization.yaml
k8s/monitoring/: servicemonitor.yaml
k8s/monitoring/grafana-dashboards/: scrapeme-dashboard.yaml
k8s/overlays/dev/: kustomization.yaml  monitoring-patch.yaml  namespace-patch.yaml  resource-limits-patch.yaml
k8s/overlays/production/: kustomization.yaml  resource-quota.yaml
k8s/overlays/staging/: kustomization.yaml  namespace-patch.yaml  resource-quota.yaml
monitoring/: alertmanager.yaml  alerts.yaml  prometheus.yaml
monitoring/grafana/dashboards/: selenium-automation.json
policies/kyverno/: disallow-latest-tag.yaml  require-resources.yaml  require-security-context.yaml
profiles/: profile.stats
tests/: conftest.py
tests/benchmarks/: test_performance.py  test_serialization_perf.py
tests/chaos/: test_network_failures.py
tests/integration/: __init__.py  test_site_processor.py
tests/load/: load_test_config.yaml  locustfile.py  real_app_locustfile.py  test_server.py
tests/property/: test_url_normalization.py
tests/unit/: test_config_loader.py  test_config_models.py  test_config_schemas.py  test_exceptions_complete.py  test_locust_imports.py  test_metrics_complete.py  test_rate_limiter.py  test_serialization.py  test_url.py  test_url_complete.py  test_url_normalization_unit.py  test_waits.py
